# claude-redditor

./: .env.example  .gitignore  ARCHITECTURE.md  BRIEFING.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  TAGGING_SYSTEM.md  debug_digest.py  debug_scan.py  handover_HN.md  n8n_gazzette.json  pyproject.toml  reddit-analyzer  reddit_analyzer.sql  test_all_subreddits.py  test_analyzer.py  test_classifier.py  test_classifier_batch.py  test_cli.py  test_e2e.py  test_hn_scraper.py
.claude/skills/: finish-session.md
commenter_img/: expressions.yaml
docs/: HOW-TO-ADD-PROJECT.md  HOW-TO-DEPLOY.md  N8N_INTEGRATION.md  handover_multitag_web.md
logs/: .gitkeep
projects/claudeia/: config.yaml
projects/claudeia/prompts/: classify.md  digest.md
projects/wineworld/prompts/: digest.md
prompts/: classify_posts.md
scripts/: daily-digest.sh  daily-scan.sh  deploy-web.sh  send-digest.sh
src/claude-redditor/: config.py  scraper.py
src/claude-redditor/core/: models.py
src/claude_redditor/: analyzer.py  classifier.py  cli.py  cli_helpers.py  config.py  content_fetcher.py  digest.py  logcentral_setup.py  projects.py  reporter.py
src/claude_redditor/cli/: __init__.py  bookmark.py  db.py  digest_cmd.py  helpers.py  info.py  podcast.py  podcast_helpers.py  scan.py
src/claude_redditor/core/: enums.py  models.py
web/: ARCHITECTURE.md  BRIEFING.md  QUICKSTART.md  README.md  package-lock.json  package.json
web/tutorials/: 0.README.md  1_INTRO.md  2_PROJECT_STRUCTURE.md  3_ASTRO_BASICS.md  4_COMPONENTS.md  5_LAYOUTS_AND_PAGES.md  6_STYLING.md  7_MAKING_CHANGES.md
(+37 files in other folders)
