[project]
name = "reddit-analyzer"
version = "0.1.0"
description = "CLI tool to analyze Reddit posts and classify them as signal vs noise"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",      # For RSS endpoint (no auth required)
    "feedparser>=6.0.0",     # For parsing RSS feeds
    "praw>=7.7.1",           # For authenticated mode (optional)
    "anthropic>=0.39.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.scripts]
reddit-analyzer = "claude_redditor.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.setuptools.packages.find]
where = ["src"]
